created all pages: about and project pages, copy is complete, need to ref images and convert them to jpg

--- a/src/about.html
+++ b/src/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="./Assets/Icons/favicon.png"/>
     <link rel="stylesheet" href="https://use.typekit.net/kbx2rsg.css">
-    <link rel="stylesheet" href="./styles/Global.scss">
+    <link rel="stylesheet" href="./styles/global.scss">
     <link rel="stylesheet" href="./styles/about/about.scss">
     <title>About | Daniel Montoya</title>
 </head>
