--- a/src/specialized.html
+++ b/src/specialized.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="./assets/icons/favicon.png"/>
-    <link rel="stylesheet" href="./styles/Global.scss">
+    <link rel="stylesheet" href="./styles/global.scss">
     <link rel="stylesheet" href="./styles/projects/main-projects.scss">
-    <link rel="stylesheet" href="./styles/projects/Specialized.scss">
+    <link rel="stylesheet" href="./styles/projects/specialized.scss">
     <link rel="stylesheet" href="https://use.typekit.net/kbx2rsg.css">
     <title>Specialized - Project 1 | Daniel Montoya</title>
 </head>
