--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="./assets/icons/favicon.png"/>
     <link rel="stylesheet" href="https://use.typekit.net/kbx2rsg.css">
-    <link rel="stylesheet" href="./styles/Global.scss">
+    <link rel="stylesheet" href="./styles/global.scss">
     <link rel="stylesheet" href="./styles/portfolio/portfolio.scss">
     <title>Daniel Montoya | Web Developer Portfolio</title>
 </head>
@@ -76,17 +76,17 @@
                             </li>
                             <li class="Project" id="Project">
                                 <span class="ProjectNumber">02</span>
-                                <a href="/" class="ProjectLink" id="ProjectLink1">Starck</a>
+                                <a href="./starck.html" class="ProjectLink" id="ProjectLink1">Starck</a>
                                 <p class="ProjectDescription" id="ProjectDescription1">premium Office Chair company website</p>
                             </li>
                             <li class="Project" id="Project">
                                 <span class="ProjectNumber">03</span>
-                                <a href="/" class="ProjectLink" id="ProjectLink3">EMC</a>
+                                <a href="./emc.html" class="ProjectLink" id="ProjectLink3">EMC</a>
                                 <p class="ProjectDescription" id="ProjectDescription">Essential macro calculator</p>
                             </li>
                             <li class="Project" id="Project">
                                 <span class="ProjectNumber">04</span>
-                                <a href="/" class="ProjectLink" id="ProjectLink4">Sapori</a>
+                                <a href="./sapori.html" class="ProjectLink" id="ProjectLink4">Sapori</a>
                                 <p class="ProjectDescription" id="ProjectDescription">italian steak house restaurant website</p>
                             </li>
                         </ul>
