working on nav, add the project section to nav, animated in, tweaked copy of project links in home page

--- a/src/home.html
+++ b/src/home.html
@@ -55,22 +55,24 @@
                         <div class="Nav-Exit-Bar"></div>
                     </div>
                 </div>
+
                 <div class="Nav-Divide-Line" id="Nav-Divide-Line"></div>
+
                 <ul class="Nav-List" id="Nav-List">
                     <li class="Nav-List-Item">
-                        <p class="Nav-Link-Number">.01</p>
+                        <p class="Nav-Link-Number">01</p>
                         <a href="./home.html" class="Nav-Link" id="Nav-Link1">HOME</a>
                     </li>
                     <li class="Nav-List-Item">
-                        <p class="Nav-Link-Number">.02</p>
+                        <p class="Nav-Link-Number">02</p>
                         <a href="./about.html" class="Nav-Link" id="Nav-Link2">ABOUT</a>
                     </li>
                     <li class="Nav-List-Item">
-                        <p class="Nav-Link-Number">.03</p>
+                        <p class="Nav-Link-Number">03</p>
                         <p class="Nav-Link" id="Nav-Link3">PROJECTS</p>
                     </li>
                     <li class="Nav-List-Item">
-                        <p class="Nav-Link-Number">.04</p>
+                        <p class="Nav-Link-Number">04</p>
                         <a href="./contact.html" class="Nav-Link" id="Nav-Link4">CONTACT</a>
                     </li>
                 </ul>
@@ -88,6 +90,35 @@
                         <p class="Nav-Info-Email">danmontoya.pr@gmail.com</p>
                     </div>
                 </div>
+
+                <ul class="Nav-Projects-List" id="Nav-Projects-List">
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link1">
+                        <p class="Nav-Link-Number">01</p>
+                        <a href="" class="Nav-Projects-Link" >M&S Agency</a>
+                        <p class="Nav-Projects-Link-Description">Monsters & Silk Digital Agency</p>
+                    </li>
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link2">
+                        <p class="Nav-Link-Number">02</p>
+                        <a href="" class="Nav-Projects-Link" >Specialized</a>
+                        <p class="Nav-Projects-Link-Description">Mountain bike E-Commerce Website</p>
+                    </li>
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link3">
+                        <p class="Nav-Link-Number">03</p>
+                        <a href="" class="Nav-Projects-Link" >Starck</a>
+                        <p class="Nav-Projects-Link-Description">Premium Office Chair website</p>
+                    </li>
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link4">
+                        <p class="Nav-Link-Number">04</p>
+                        <a href="" class="Nav-Projects-Link" >EMC</a>
+                        <p class="Nav-Projects-Link-Description">Essential macro calculator</p>
+                    </li>
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link5">
+                        <p class="Nav-Link-Number">05</p>
+                        <a href="" class="Nav-Projects-Link" >Sapori</a>
+                        <p class="Nav-Projects-Link-Description">Italian steak house restaurant website</p>
+                    </li>
+                </ul>
+
             </div>
         </nav>
 
@@ -153,12 +184,12 @@
                             <li class="Project" id="Project2">
                                 <span class="ProjectNumber">02</span>
                                 <a href="./specialized.html" class="ProjectLink" id="ProjectLink2">Specialized</a>
-                                <p class="ProjectDescription" id="ProjectDescription">Mountain bike company E-Commerce Website</p>
+                                <p class="ProjectDescription" id="ProjectDescription">Mountain bike E-Commerce Website</p>
                             </li>
                             <li class="Project" id="Project3">
                                 <span class="ProjectNumber">03</span>
                                 <a href="./starck.html" class="ProjectLink" id="ProjectLink3">Starck</a>
-                                <p class="ProjectDescription" id="ProjectDescription1">Premium Office Chair company website</p>
+                                <p class="ProjectDescription" id="ProjectDescription1">Premium Office Chair website</p>
                             </li>
                             <li class="Project" id="Project4">
                                 <span class="ProjectNumber">04</span>
