some refactoring and redesign happening with teh project pages, new, more modern style to project display, finished first page/ frame for the rest

--- a/src/home.html
+++ b/src/home.html
@@ -83,38 +83,40 @@
                         <p class="Nav-Info-Title">Web Developer</p>
                         <p class="Nav-Info-Portfolio">Portfolio</p>
                         <div class="Nav-Info-Links">
-                            <a href="" class="Nav-Info-Link">LinkedIn</a>
-                            <a href="" class="Nav-Info-Link">Github</a>
-                            <a href="" class="Nav-Info-Link">Instagram</a>
+                            <a href="https://www.linkedin.com/in/daniel--montoya/" target="_blank" class="Nav-Info-Link">LinkedIn</a>
+                            <a href="https://github.com/DemBrabus" target="_blank" class="Nav-Info-Link">Github</a>
+                            <a href="https://www.instagram.com/dembrabus/" target="_blank" class="Nav-Info-Link">Instagram</a>
                         </div>
                         <p class="Nav-Info-Email">danmontoya.pr@gmail.com</p>
                     </div>
                 </div>
 
+                <p class="Nav-Projects-Close" id="Nav-Projects-Close">Close</p>
+
                 <ul class="Nav-Projects-List" id="Nav-Projects-List">
                     <li class="Nav-Projects-List-Item" id="Nav-Projects-Link1">
                         <p class="Nav-Link-Number">01</p>
-                        <a href="" class="Nav-Projects-Link" >M&S Agency</a>
+                        <a href="./monstersandsilk.html" class="Nav-Projects-Link" >M&S Agency</a>
                         <p class="Nav-Projects-Link-Description">Monsters & Silk Digital Agency</p>
                     </li>
                     <li class="Nav-Projects-List-Item" id="Nav-Projects-Link2">
                         <p class="Nav-Link-Number">02</p>
-                        <a href="" class="Nav-Projects-Link" >Specialized</a>
+                        <a href="./specialized.html" class="Nav-Projects-Link" >Specialized</a>
                         <p class="Nav-Projects-Link-Description">Mountain bike E-Commerce Website</p>
                     </li>
                     <li class="Nav-Projects-List-Item" id="Nav-Projects-Link3">
                         <p class="Nav-Link-Number">03</p>
-                        <a href="" class="Nav-Projects-Link" >Starck</a>
+                        <a href="./starck.html" class="Nav-Projects-Link" >Starck</a>
                         <p class="Nav-Projects-Link-Description">Premium Office Chair website</p>
                     </li>
                     <li class="Nav-Projects-List-Item" id="Nav-Projects-Link4">
                         <p class="Nav-Link-Number">04</p>
-                        <a href="" class="Nav-Projects-Link" >EMC</a>
+                        <a href="./emc.html" class="Nav-Projects-Link" >EMC</a>
                         <p class="Nav-Projects-Link-Description">Essential macro calculator</p>
                     </li>
                     <li class="Nav-Projects-List-Item" id="Nav-Projects-Link5">
                         <p class="Nav-Link-Number">05</p>
-                        <a href="" class="Nav-Projects-Link" >Sapori</a>
+                        <a href="./sapori.html" class="Nav-Projects-Link" >Sapori</a>
                         <p class="Nav-Projects-Link-Description">Italian steak house restaurant website</p>
                     </li>
                 </ul>
@@ -157,20 +159,6 @@
                             <p class="PortfolioContext-Text"><span id="PortfolioContext-Text2">Hit me up, let's make something awesome!</span></p>
                         </div>
                     </div>
-
-                    <!-- Context -->
-                    <!-- <div class="PortfolioContext" id="PortfolioContext">
-                        <p class="PortfolioContext-Title" id="PortfolioContext-Title">Frontend Web Developer</p>
-                        <div class="PortfolioContext-Wrap">
-                            <p class="PortfolioContext-Text" id="PortfolioContext-Text"><span id="PortfolioContext-Text2">A  passionate developer creating modern websites with the latest web technologies.</span> In my work I prioritize performance, a clean code base and a sleek UI. I believe in always exceeding expectations and continuously learning to be the best at my craft.
-                            <br> 
-                            <br>
-                            I'm currently seeking out the right team where I can contribute in making amazing digital products. This is a collection of Websites and Web Apps that help demonstrate my knowledge and abilities as a Web Developer.</p>
-                            <br>
-                            <p class="PortfolioContext-Text"><span id="PortfolioContext-Text2">Hit me up, let's make something awesome!</span></p>
-                        </div>
-                    </div> -->
-
 
                     <!-- Projects -->
                     <div class="PortfolioProjects" id="PortfolioProjects">
