--- a/src/contact.html
+++ b/src/contact.html
@@ -7,18 +7,18 @@
     <link rel="shortcut icon" type="image/png" href="./Assets/Icons/favicon.png"/>
     <link rel="stylesheet" href="https://use.typekit.net/kbx2rsg.css">
     <link rel="stylesheet" href="./styles/global.scss">
-    <link rel="stylesheet" href="./styles/about/about.scss">
+    <link rel="stylesheet" href="./styles/Contact/Contact.scss">
     <title>About | Daniel Montoya</title>
 </head>
 <body id="Body" class="Body">
 
             <!-- Landing Intro -->
-            <div class="Landing-Intro" id="Landing-Intro">
-                <div class="Landing-Intro-Wrap">
+            <div class="Contact-Intro" id="Contact-Intro">
+                <div class="Contact-Intro-Wrap">
 
-                    <div class="Landing-IntroSlide Landing-IntroSlideLeft" id="Landing-IntroSlideLeft"></div>
+                    <div class="Contact-IntroSlide Contact-IntroSlideLeft" id="Contact-IntroSlideLeft"></div>
 
-                    <div class="Landing-IntroSlide Landing-IntroSlideRight" id="Landing-IntroSlideRight"></div>
+                    <div class="Contact-IntroSlide Contact-IntroSlideRight" id="Contact-IntroSlideRight"></div>
 
 
                 </div>
@@ -55,23 +55,25 @@
                         <div class="Nav-Exit-Bar"></div>
                     </div>
                 </div>
+
                 <div class="Nav-Divide-Line" id="Nav-Divide-Line"></div>
+
                 <ul class="Nav-List" id="Nav-List">
                     <li class="Nav-List-Item">
-                        <p class="Nav-Link-Number">.01</p>
+                        <p class="Nav-Link-Number">01</p>
                         <a href="./home.html" class="Nav-Link" id="Nav-Link1">HOME</a>
                     </li>
                     <li class="Nav-List-Item">
-                        <p class="Nav-Link-Number">.02</p>
-                        <a href="./home.html" class="Nav-Link" id="Nav-Link2">ABOUT</a>
+                        <p class="Nav-Link-Number">02</p>
+                        <a href="./about.html" class="Nav-Link" id="Nav-Link2">ABOUT</a>
                     </li>
                     <li class="Nav-List-Item">
-                        <p class="Nav-Link-Number">.03</p>
+                        <p class="Nav-Link-Number">03</p>
                         <p class="Nav-Link" id="Nav-Link3">PROJECTS</p>
                     </li>
                     <li class="Nav-List-Item">
-                        <p class="Nav-Link-Number">.04</p>
-                        <a href="./home.html" class="Nav-Link" id="Nav-Link4">CONTACT</a>
+                        <p class="Nav-Link-Number">04</p>
+                        <a href="./contact.html" class="Nav-Link" id="Nav-Link4">CONTACT</a>
                     </li>
                 </ul>
 
@@ -81,13 +83,44 @@
                         <p class="Nav-Info-Title">Web Developer</p>
                         <p class="Nav-Info-Portfolio">Portfolio</p>
                         <div class="Nav-Info-Links">
-                            <a href="" class="Nav-Info-Link">LinkedIn</a>
-                            <a href="" class="Nav-Info-Link">Github</a>
-                            <a href="" class="Nav-Info-Link">Instagram</a>
+                            <a href="https://www.linkedin.com/in/daniel--montoya/" target="_blank" class="Nav-Info-Link">LinkedIn</a>
+                            <a href="https://github.com/DemBrabus" target="_blank" class="Nav-Info-Link">Github</a>
+                            <a href="https://www.instagram.com/dembrabus/" target="_blank" class="Nav-Info-Link">Instagram</a>
                         </div>
                         <p class="Nav-Info-Email">danmontoya.pr@gmail.com</p>
                     </div>
                 </div>
+
+                <p class="Nav-Projects-Close" id="Nav-Projects-Close">Close</p>
+
+                <ul class="Nav-Projects-List" id="Nav-Projects-List">
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link1">
+                        <p class="Nav-Link-Number">01</p>
+                        <a href="./monstersandsilk.html" class="Nav-Projects-Link" >M&S Agency</a>
+                        <p class="Nav-Projects-Link-Description">Monsters & Silk Digital Agency</p>
+                    </li>
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link2">
+                        <p class="Nav-Link-Number">02</p>
+                        <a href="./specialized.html" class="Nav-Projects-Link" >Specialized</a>
+                        <p class="Nav-Projects-Link-Description">Mountain bike E-Commerce Website</p>
+                    </li>
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link3">
+                        <p class="Nav-Link-Number">03</p>
+                        <a href="./starck.html" class="Nav-Projects-Link" >Starck</a>
+                        <p class="Nav-Projects-Link-Description">Premium Office Chair website</p>
+                    </li>
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link4">
+                        <p class="Nav-Link-Number">04</p>
+                        <a href="./emc.html" class="Nav-Projects-Link" >EMC</a>
+                        <p class="Nav-Projects-Link-Description">Essential macro calculator</p>
+                    </li>
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link5">
+                        <p class="Nav-Link-Number">05</p>
+                        <a href="./sapori.html" class="Nav-Projects-Link" >Sapori</a>
+                        <p class="Nav-Projects-Link-Description">Italian steak house restaurant website</p>
+                    </li>
+                </ul>
+
             </div>
         </nav>
 
@@ -113,6 +146,6 @@
     </div> 
 
         <script src="./index.js"></script>
-        <script src="./scripts/Home/Home.js"></script>
+        <script src="./scripts/Contact/Contact.js"></script>
 </body>
 </html>
