--- a/src/specialized.html
+++ b/src/specialized.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="https://use.typekit.net/kbx2rsg.css">
     <link rel="stylesheet" href="./styles/global.scss">
     <link rel="stylesheet" href="./styles/Projects/Project-Frame.scss">
+    <link rel="stylesheet" href="./styles/Projects/specialized.scss">
     <!-- <link rel="stylesheet" href="./styles/projects/specialized.scss"> -->
-    <title>Specialized - Project 1 | Daniel Montoya</title>
+    <title>Specialized - Project 2 | Daniel Montoya</title>
 </head>
 <body id="Body">
 
@@ -127,7 +128,7 @@
             <!-- Intro -->
             <section class="ProjectIntro" id="ProjectIntro">
 
-                <div class="ProjectIntro-BG" id="ProjectIntro-BG"></div>
+                <div class="ProjectIntro-BG Specialized-Intro-BG" id="ProjectIntro-BG"></div>
 
                 <p class="ProjectIntro-Scroll" id="ProjectIntro-Scroll">SCROLL</p>
 
@@ -175,7 +176,7 @@
 
             <!-- MockUp -->
             <section class="ProjectDisplay-Mock">
-                <div class="Mock1-BG"></div>
+                <div class="Mock1-BG Specialized-Mock1-BG"></div>
             </section>
 
 
@@ -191,7 +192,7 @@
 
             <!-- MockUp -->
             <section class="ProjectDisplay-Mock2">
-                <div class="Mock2-BG"></div>
+                <div class="Mock2-BG Specialized-Mock2-BG"></div>
             </section>
 
 
