--- a/src/emc.html
+++ b/src/emc.html
@@ -26,19 +26,102 @@
     </div>
     
 
-    <!-- ScrollBar -->
-    <div class="ScrollBar" id="ScrollBar"></div>
 
-
-    
     <div class="GroundZero" id="GroundZero">
 
-        <nav class="Nav ProjectNav" id="Nav">
-            <a href="/index.html" class="Logo" id="Logo"><img src="./assets/icons/PortfolioLogo.svg" alt="Bolts Logo"></a>
-            <ul class="NavList"id='NavList'>
-                <p href="" class="NavItem"><a class="NavLink" href="/index.html">Portfolio</a></p>
-                <p  class="NavItem"><a class="NavLink" href="/about.html">About</a></p>
-            </ul>
+
+    <!-- Navigation -->
+
+        <!-- Logo -->
+        <div class="Portfolio-Logo" id="Portfolio-Logo">
+            <a href="/home.html">
+                <img src="./Assets/Icons/PortfolioLogo.svg" alt="Bolts Logo">
+            </a>
+        </div>
+
+        <!-- Menu Icon -->
+        <div class="Menu-Icon" id="Menu-Icon">
+            <div class="Menu-Icon-Wrap" id="Menu-Icon-Wrap">
+                <div class="Menu-Icon-Bar Menu-Icon-Bar1" id="Menu-Icon-Bar1"></div>
+                <div class="Menu-Icon-Bar Menu-Icon-Bar2" id="Menu-Icon-Bar2"></div>
+            </div>
+        </div>
+
+        <!-- Nav -->
+        <nav class="Nav" id="Nav">
+            <div class="Nav-Wrap">
+                <div class="Nav-Exit" id="Nav-Exit">
+                    <div class="Nav-Exit-Wrap">
+                        <div class="Nav-Exit-Bar"></div>
+                    </div>
+                </div>
+
+                <div class="Nav-Divide-Line" id="Nav-Divide-Line"></div>
+
+                <ul class="Nav-List" id="Nav-List">
+                    <li class="Nav-List-Item">
+                        <p class="Nav-Link-Number">01</p>
+                        <a href="./home.html" class="Nav-Link" id="Nav-Link1">HOME</a>
+                    </li>
+                    <li class="Nav-List-Item">
+                        <p class="Nav-Link-Number">02</p>
+                        <a href="./about.html" class="Nav-Link" id="Nav-Link2">ABOUT</a>
+                    </li>
+                    <li class="Nav-List-Item">
+                        <p class="Nav-Link-Number">03</p>
+                        <p class="Nav-Link" id="Nav-Link3">PROJECTS</p>
+                    </li>
+                    <li class="Nav-List-Item">
+                        <p class="Nav-Link-Number">04</p>
+                        <a href="./contact.html" class="Nav-Link" id="Nav-Link4">CONTACT</a>
+                    </li>
+                </ul>
+
+                <div class="Nav-Info" id="Nav-Info">
+                    <div class="Nav-Info-Wrap">
+                        <p class="Nav-Info-Name">Daniel Montoya</p>
+                        <p class="Nav-Info-Title">Web Developer</p>
+                        <p class="Nav-Info-Portfolio">Portfolio</p>
+                        <div class="Nav-Info-Links">
+                            <a href="https://www.linkedin.com/in/daniel--montoya/" target="_blank" class="Nav-Info-Link">LinkedIn</a>
+                            <a href="https://github.com/DemBrabus" target="_blank" class="Nav-Info-Link">Github</a>
+                            <a href="https://www.instagram.com/dembrabus/" target="_blank" class="Nav-Info-Link">Instagram</a>
+                        </div>
+                        <p class="Nav-Info-Email">danmontoya.pr@gmail.com</p>
+                    </div>
+                </div>
+
+                <p class="Nav-Projects-Close" id="Nav-Projects-Close">Close</p>
+
+                <ul class="Nav-Projects-List" id="Nav-Projects-List">
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link1">
+                        <p class="Nav-Link-Number">01</p>
+                        <a href="./monstersandsilk.html" class="Nav-Projects-Link" >M&S Agency</a>
+                        <p class="Nav-Projects-Link-Description">Monsters & Silk Digital Agency</p>
+                    </li>
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link2">
+                        <p class="Nav-Link-Number">02</p>
+                        <a href="./specialized.html" class="Nav-Projects-Link" >Specialized</a>
+                        <p class="Nav-Projects-Link-Description">Mountain bike E-Commerce Website</p>
+                    </li>
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link3">
+                        <p class="Nav-Link-Number">03</p>
+                        <a href="./starck.html" class="Nav-Projects-Link" >Starck</a>
+                        <p class="Nav-Projects-Link-Description">Premium Office Chair website</p>
+                    </li>
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link4">
+                        <p class="Nav-Link-Number">04</p>
+                        <a href="./emc.html" class="Nav-Projects-Link" >EMC</a>
+                        <p class="Nav-Projects-Link-Description">Essential macro calculator</p>
+                    </li>
+                    <li class="Nav-Projects-List-Item" id="Nav-Projects-Link5">
+                        <p class="Nav-Link-Number">05</p>
+                        <a href="./sapori.html" class="Nav-Projects-Link" >Sapori</a>
+                        <p class="Nav-Projects-Link-Description">Italian steak house restaurant website</p>
+                    </li>
+                </ul>
+
+            </div>
         </nav>
 
         <div class="ProjectPage">
@@ -163,7 +246,6 @@
         </div>
     </div>
 
-        <script src="./scripts/ProjectPages/ProjectPage.js"></script>
-    <script src="./index.js"></script>
+    <script src="./scripts/ProjectPages/ProjectPage.js"></script>
 </body>
 </html>
